added img for look

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -36,6 +36,11 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-    <h1>Hello World from ejs file</h1>
+        <img src="../public/images/imgChatBot.png" 
+            style="height:auto;
+            max-width:100%;
+            border:none;
+            display:block;"
+            alt="img chatbot" />
 </body>
 </html>
