changing style img

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -37,10 +37,8 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
         <img src="../public/images/imgChatBot.png" 
-            style="height:auto;
-            max-width:100%;
-            border:none;
-            display:block;"
+            style=" width: 100%;
+            height: auto;"
             alt="img chatbot" />
 </body>
 </html>
