adding greetings thanks and byby to the chat bot

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+    <h1>Hello and welcome to my demo of chatbot</h1>
+    <p>this chat bot is deployed in heroku and created with node js together with facebook chatbot Plugin</p>
     <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
@@ -36,9 +38,6 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-        <img src="../public/images/imgChatBot.png" 
-            style=" width: 100%;
-            height: auto;"
-            alt="img chatbot" />
+        
 </body>
 </html>
